<resources>
    <string name="app_name">StudioWedding</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Thông báo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: job -->
    <string name="fragment_job">Công việc</string>
    <string name="fragment_job_id">HD0001</string>
    <string name="fragment_job_date">16/11/2023</string>
    <string name="fragment_job_status">Đang thực hiện</string>
    <string name="fragment_job_name">Chụp hình cưới</string>
    <string name="fragment_job_address">Sơn Trà - Đà Nẵng</string>
    <string name="fragment_job_employee">AnhNT, NgocTV</string>
    <string name="activity_update_job">Cập nhật công việc</string>
    <string name="activity_update_job_detail">Chi tiết tham gia</string>
    <string name="activity_update_job_add">Thêm</string>
    <string name="activity_update_job_save">LƯU</string>
    <string name="activity_update_job_note">Trạng thái công việc</string>
    <string name="activity_search_job">Nhập tên công việc</string>
    <string name="fragment_job_list">Danh sách công việc</string>
    <string name="fragment_job_see_all">Xem tất cả</string>
    <string name="fragment_job_list_today">Công việc hôm nay</string>

    <string name="home">Trang Chủ</string>
    <string name="services">Sản phẩm &amp; Dịch vụ</string>
    <string name="mywork">Công Việc</string>
    <string name="employee">Nhân Viên</string>
    <string name="invoice">Hợp Đồng</string>
    <string name="client">Khách Hàng</string>
    <string name="setiing">Cài Đặt</string>
    <string name="statistic">Thống kê</string>
    <string name="notification">Thông báo</string>
    <string name="logout">Đăng Xuất</string>
    <string name="task">Công việc</string>


    <!-- Staff -->
    <string name="content_staff">Danh sách nhân viên</string>
    <string name="name_staff">Floyd Miles</string>
    <string name="role_staff">Thợ ảnh</string>
    <string name="content_add_staff">Thêm nhân viên</string>
    <string name="hint_email_staff">Email</string>
    <string name="edt_pass_staff">abc</string>
    <string name="hint_name_staff">Họ tên</string>
    <string name="hint_dateofbirth_staff">Ngày sinh</string>
    <string name="hint_phone_staff">Điện thoại</string>
    <string name="hint_adress_staff">Địa chỉ</string>
    <string name="hint_role_staff">Chọn vai trò</string>
    <string name="text_gender_staff">Giới tính</string>
    <string name="text_gender_staff_male">Nam</string>
    <string name="text_gender_staff_female">Nữ</string>
    <string name="text_btn_add">THÊM MỚI</string>
    <string name="content_update_staff">Thông tin nhân viên</string>

    <string name="text_email_update_staff">nv1@gmail.com</string>
    <string name="text_dob_update_staff">12/21/2001</string>
    <string name="text_phone_update_staff">0905456123</string>
    <string name="text_location_update_staff">Đà Nẵng</string>
    <string name="text_role_update_staff">Thợ ảnh</string>
    <string name="text_btn_update_staff">CẬP NHẬT</string>

    <string name="title_add_contract">Thêm hợp đồng</string>
    <string name="paid">Đã thanh toán</string>
    <string name="unpaid">Chưa thanh toán</string>
    <string name="title_update_contract">Cập nhật hợp đồng</string>
    <string name="aciton_update">Cập nhật</string>
    <string name="action_del">Xoá</string>
    <string name="title_pick_client">Chọn khách hàng</string>
    <string name="incurrent">Có phát sinh</string>
    <string name="is_incurrent">Không có phát sinh</string>
    <string name="damage">Làm hỏng đồ</string>
    <string name="is_late">Trả đồ muộn</string>


    <string name="icon_description">Role Icon</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string-array name="product_array">
        <item>Chú rể</item>
        <item>Cô dâu</item>
    </string-array>
    <string-array name="product_type_array">
        <item>Sẵn sàng</item>
        <item>Chưa sẵn sàng</item>
        <item>Có phát sinh</item>
    </string-array>
</resources>