<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line"
    tools:context=".view.activity.Employee.AddEmployeeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/content_add_staff"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar21">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_add_img_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_add_img"
                android:layout_marginTop="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_add_email_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:layout_marginTop="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/login_username"
                android:hint="@string/hint_email_staff"
                android:drawablePadding="23dp"
                android:paddingStart="17dp"
                android:fontFamily="@font/inter_regular"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bgr_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/civ_add_img_employee" />

            <EditText
                android:id="@+id/et_add_pass_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/login_password"
                android:text="@string/edt_pass_staff"
                android:drawablePadding="23dp"
                android:paddingStart="17dp"
                android:fontFamily="@font/inter_regular"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bgr_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_email_employee"
                android:enabled="false"/>

            <EditText
                android:id="@+id/et_add_name_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/client_name"
                android:hint="@string/hint_name_staff"
                android:drawablePadding="23dp"
                android:paddingStart="17dp"
                android:fontFamily="@font/inter_regular"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bgr_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_pass_employee" />

            <EditText
                android:id="@+id/et_add_dob_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/detail_contract_dop"
                android:hint="@string/hint_dateofbirth_staff"
                android:drawablePadding="23dp"
                android:paddingStart="17dp"
                android:fontFamily="@font/inter_regular"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bgr_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_name_employee" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_bgr_white"
                android:minHeight="52dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_dob_employee">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:drawableStart="@drawable/ic_gender"
                    android:drawablePadding="22dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/text_gender_staff"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:scaleX="0.9"
                        android:scaleY="0.9"
                        android:text="@string/text_gender_staff_male"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:paddingEnd="7dp"
                        android:scaleX="0.9"
                        android:scaleY="0.9"
                        android:text="@string/text_gender_staff_female"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/et_add_phone_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_bgr_white"
                android:drawableStart="@drawable/client_phone"
                android:drawablePadding="23dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/hint_phone_staff"
                android:minHeight="52dp"
                android:paddingStart="17dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <EditText
                android:id="@+id/et_add_address_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_bgr_white"
                android:drawableStart="@drawable/locaion"
                android:drawablePadding="23dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/hint_adress_staff"
                android:minHeight="52dp"
                android:paddingStart="17dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_phone_employee" />

            <EditText
                android:id="@+id/et_add_role_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_bgr_white"
                android:drawableStart="@drawable/spinner_select"
                android:drawablePadding="23dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/hint_role_staff"
                android:drawableEnd="@drawable/spinner_arrow_down"
                android:paddingEnd="35dp"
                android:minHeight="52dp"
                android:paddingStart="17dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:enabled="false"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_address_employee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="34dp"
                android:background="@drawable/button_bgr_primary"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_role_employee">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/text_btn_add"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>